--- a/books/views/books.jade
+++ b/books/views/books.jade
@@ -1,9 +1,8 @@
 extends layout
 
 block content
-  h1 Welcome to Books
-  a(href='/show')
-    p Show One Book 
-  a(href="/new") Add a book
+    
+  for book in books
+    img(src="#{book.book_image}")
   
   
