--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,6 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p WELCOME TO #{title}
+  a(href="/books") 
+    Click to go to Books
