--- a/views/index.jade
+++ b/views/index.jade
@@ -3,5 +3,5 @@ extends layout
 block content
   h1= title
   p WELCOME TO #{title}
-  a(href="/books") 
+  a(href="books") 
     Click to go to Books
